tests/04-input-param-is-a-single-u8.stderr
error: custom attribute panicked
 --> tests/04-input-param-is-a-single-u8.rs:3:1
  |
3 | #[lookup]
  | ^^^^^^^^^
  |
  = help: message: input param isn't a single u8
