tests/04-input-param-is-a-single-u8.rs
use constable::lookup;

#[lookup]
const fn foo(_x: u16) -> bool {
    false
}

fn main() {}
